// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CF Writer Base Generate Base Config - App Frontend Generate deployment configs - app frontend 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"appfrontend\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"Build and deployment scripts\\",
  \\"scripts\\": {
    \\"clean\\": \\"rimraf --glob resources mta_archives mta-op*\\",
    \\"build\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
    \\"deploy\\": \\"cf deploy mta_archives/archive.mtar --retries 1\\",
    \\"undeploy\\": \\"cf undeploy appfrontend --delete-services --delete-service-keys --delete-service-brokers\\"
  },
  \\"devDependencies\\": {
    \\"mbt\\": \\"^1.2.29\\",
    \\"rimraf\\": \\"^6.0.1\\"
  }
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
  \\"xsappname\\": \\"appfrontend\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer Base Generate Base Config - App Frontend Generate deployment configs - app frontend 2`] = `
"_schema-version: \\"3.2\\"
ID: appfrontend
description: MyManagedDescription
version: 0.0.1
modules:
- name: appfrontend-app-content
  type: com.sap.application.content
  path: .
  requires:
  - name: appfrontend-app-front
    parameters:
      content-target: true
  - name: appfrontend-uaa
  parameters:
    config:
      destinations:
      - name: ui5
        url: https://ui5.sap.com
resources:
- name: appfrontend-uaa
  type: org.cloudfoundry.managed-service
  parameters:
    path: ./xs-security.json
    service: xsuaa
    service-name: appfrontend-xsuaa-service
    service-plan: application
- name: appfrontend-app-front
  type: org.cloudfoundry.managed-service
  parameters:
    service: app-front
    service-name: appfrontend-app-front-service
    service-plan: developer
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;

exports[`CF Writer Base Generate Base Config - Managed Generate deployment configs - managed 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"managed\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"Build and deployment scripts\\",
  \\"scripts\\": {
    \\"clean\\": \\"rimraf --glob resources mta_archives mta-op*\\",
    \\"build\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
    \\"deploy\\": \\"cf deploy mta_archives/archive.mtar --retries 1\\",
    \\"undeploy\\": \\"cf undeploy managed --delete-services --delete-service-keys --delete-service-brokers\\"
  },
  \\"devDependencies\\": {
    \\"mbt\\": \\"^1.2.29\\",
    \\"rimraf\\": \\"^6.0.1\\"
  }
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
  \\"xsappname\\": \\"managed\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer Base Generate Base Config - Managed Generate deployment configs - managed 2`] = `
"_schema-version: \\"3.2\\"
ID: managed
description: MyManagedDescription
version: 0.0.1
modules:
- name: managed-destination-content
  type: com.sap.application.content
  requires:
  - name: managed-destination-service
    parameters:
      content-target: true
  - name: managed-repo-host
    parameters:
      service-key:
        name: managed-repo-host-key
  - name: managed-uaa
    parameters:
      service-key:
        name: managed-uaa-key
  parameters:
    content:
      instance:
        destinations:
        - Name: managed_html_repo_host
          ServiceInstanceName: managed-html5-service
          ServiceKeyName: managed-repo-host-key
          sap.cloud.service: managed
        - Authentication: OAuth2UserTokenExchange
          Name: managed_uaa
          ServiceInstanceName: managed-xsuaa-service
          ServiceKeyName: managed-uaa-key
          sap.cloud.service: managed
        existing_destinations_policy: update
  build-parameters:
    no-source: true
resources:
- name: managed-destination-service
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      HTML5Runtime_enabled: true
      init_data:
        instance:
          destinations:
          - Authentication: NoAuthentication
            Name: ui5
            ProxyType: Internet
            Type: HTTP
            URL: https://ui5.sap.com
          existing_destinations_policy: update
      version: 1.0.0
    service: destination
    service-name: managed-destination-service
    service-plan: lite
- name: managed-uaa
  type: org.cloudfoundry.managed-service
  parameters:
    path: ./xs-security.json
    service: xsuaa
    service-name: managed-xsuaa-service
    service-plan: application
- name: managed-repo-host
  type: org.cloudfoundry.managed-service
  parameters:
    service: html5-apps-repo
    service-name: managed-html5-service
    service-plan: app-host
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;

exports[`CF Writer Base Generate Base Config - Standalone Generate deployment configs - standalone with ABAP service provider 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"standalonewithabapserviceprovider\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"Build and deployment scripts\\",
  \\"scripts\\": {
    \\"clean\\": \\"rimraf --glob resources mta_archives mta-op*\\",
    \\"build\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
    \\"deploy\\": \\"cf deploy mta_archives/archive.mtar --retries 1\\",
    \\"undeploy\\": \\"cf undeploy standalonewithabapserviceprovider --delete-services --delete-service-keys --delete-service-brokers\\"
  },
  \\"devDependencies\\": {
    \\"mbt\\": \\"^1.2.29\\",
    \\"rimraf\\": \\"^6.0.1\\"
  }
}
",
    "state": "modified",
  },
  "router/package.json": Object {
    "contents": "{
    \\"name\\": \\"app-router\\",
    \\"description\\": \\"App router\\",
    \\"scripts\\": {
        \\"start\\": \\"node node_modules/@sap/approuter/approuter.js\\"
    },
    \\"dependencies\\": {
        \\"@sap/approuter\\": \\"^20.0.0\\"
    }
}",
    "state": "modified",
  },
  "router/xs-app.json": Object {
    "contents": "{
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^/sap/(.*)$\\",
      \\"target\\": \\"/sap/$1\\",
      \\"service\\": \\"TestService\\",
      \\"endpoint\\": \\"TestEndPoint\\",
      \\"authenticationType\\": \\"xsuaa\\",
      \\"csrfProtection\\": false
    },
    {
      \\"source\\": \\"^/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    }
  ]
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
  \\"xsappname\\": \\"standalonewithabapserviceprovider\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer Base Generate Base Config - Standalone Generate deployment configs - standalone with ABAP service provider 2`] = `
"_schema-version: \\"3.2\\"
ID: standalonewithabapserviceprovider
description: Generated by Fiori Tools
version: 0.0.1
modules:
- name: standalonewithabapserviceprovider-router
  type: approuter.nodejs
  path: router
  requires:
  - name: standalonewithabapserviceprovider-html5-repo-runtime
  - name: standalonewithabapserviceprovider-uaa
  - name: standalonewithabapserviceprovider-destination-service
    group: destinations
    properties:
      forwardAuthToken: false
      name: ui5
      url: https://ui5.sap.com
  - name: standalonewithabapservic-abap-Y11_00.0035
  parameters:
    disk-quota: 256M
    memory: 256M
resources:
- name: standalonewithabapserviceprovider-uaa
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      tenant-mode: dedicated
      xsappname: standalonewithabapserviceprovider-\${space-guid}
    path: ./xs-security.json
    service: xsuaa
    service-name: standalonewithabapserviceprovider-xsuaa-service
    service-plan: application
- name: standalonewithabapserviceprovider-html5-repo-runtime
  type: org.cloudfoundry.managed-service
  parameters:
    service: html5-apps-repo
    service-plan: app-runtime
- name: standalonewithabapserviceprovider-destination-service
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      HTML5Runtime_enabled: false
      init_data:
        instance:
          destinations:
          - Authentication: NoAuthentication
            Name: ui5
            ProxyType: Internet
            Type: HTTP
            URL: https://ui5.sap.com
          existing_destinations_policy: update
      version: 1.0.0
    service: destination
    service-name: standalonewithabapserviceprovider-destination-service
    service-plan: lite
- name: standalonewithabapservic-abap-Y11_00.0035
  type: org.cloudfoundry.existing-service
  parameters:
    protocol:
    - ODataV2
    service: abap-haas
    service-name: Y11_00.0035
    service-plan: 16_abap_64_db
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;

exports[`CF Writer Base Generate Base Config - Standalone Generate deployment configs - standalone with connectivity service 1`] = `
Object {
  ".gitignore": Object {
    "contents": "node_modules/
dist/
.scp/
.env
Makefile*.mta
mta_archives
mta-*
resources
archive.zip
.*_mta_build_tmp",
    "state": "modified",
  },
  "package.json": Object {
    "contents": "{
  \\"name\\": \\"standalone-with-connectivity-service\\",
  \\"version\\": \\"0.0.1\\",
  \\"description\\": \\"Build and deployment scripts\\",
  \\"scripts\\": {
    \\"clean\\": \\"rimraf --glob resources mta_archives mta-op*\\",
    \\"build\\": \\"rimraf resources mta_archives && mbt build --mtar archive\\",
    \\"deploy\\": \\"cf deploy mta_archives/archive.mtar --retries 1\\",
    \\"undeploy\\": \\"cf undeploy standalone-with-connectivity-service --delete-services --delete-service-keys --delete-service-brokers\\"
  },
  \\"devDependencies\\": {
    \\"mbt\\": \\"^1.2.29\\",
    \\"rimraf\\": \\"^6.0.1\\"
  }
}
",
    "state": "modified",
  },
  "router/package.json": Object {
    "contents": "{
    \\"name\\": \\"app-router\\",
    \\"description\\": \\"App router\\",
    \\"scripts\\": {
        \\"start\\": \\"node node_modules/@sap/approuter/approuter.js\\"
    },
    \\"dependencies\\": {
        \\"@sap/approuter\\": \\"^20.0.0\\"
    }
}",
    "state": "modified",
  },
  "router/xs-app.json": Object {
    "contents": "{
  \\"authenticationMethod\\": \\"route\\",
  \\"routes\\": [
    {
      \\"source\\": \\"^(?:/app|/app/.*)?/resources/(.*)$\\",
      \\"target\\": \\"/resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    },
    {
      \\"source\\": \\"^(?:/app|/app/.*)?/test-resources/(.*)$\\",
      \\"target\\": \\"/test-resources/$1\\",
      \\"authenticationType\\": \\"none\\",
      \\"destination\\": \\"ui5\\"
    }
  ]
}
",
    "state": "modified",
  },
  "xs-security.json": Object {
    "contents": "{
  \\"xsappname\\": \\"standalone-with-connectivity-service\\",
  \\"tenant-mode\\": \\"dedicated\\",
  \\"description\\": \\"Security profile of called application\\",
  \\"scopes\\": [],
  \\"role-templates\\": []
}
",
    "state": "modified",
  },
}
`;

exports[`CF Writer Base Generate Base Config - Standalone Generate deployment configs - standalone with connectivity service 2`] = `
"_schema-version: \\"3.2\\"
ID: standalone-with-connectivity-service
description: Generated by Fiori Tools
version: 0.0.1
modules:
- name: standalone-with-connectivity-service-router
  type: approuter.nodejs
  path: router
  requires:
  - name: standalone-with-connectivity-service-html5-repo-runtime
  - name: standalone-with-connectivity-service-uaa
  - name: standalone-with-connectivity-service-destination-service
    group: destinations
    properties:
      forwardAuthToken: false
      name: ui5
      url: https://ui5.sap.com
  - name: standalone-with-connectivity-service-connectivity
  parameters:
    disk-quota: 256M
    memory: 256M
resources:
- name: standalone-with-connectivity-service-uaa
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      tenant-mode: dedicated
      xsappname: standalone-with-connectivity-service-\${space-guid}
    path: ./xs-security.json
    service: xsuaa
    service-name: standalone-with-connectivity-service-xsuaa-service
    service-plan: application
- name: standalone-with-connectivity-service-html5-repo-runtime
  type: org.cloudfoundry.managed-service
  parameters:
    service: html5-apps-repo
    service-plan: app-runtime
- name: standalone-with-connectivity-service-destination-service
  type: org.cloudfoundry.managed-service
  parameters:
    config:
      HTML5Runtime_enabled: false
      init_data:
        instance:
          destinations:
          - Authentication: NoAuthentication
            Name: ui5
            ProxyType: Internet
            Type: HTTP
            URL: https://ui5.sap.com
          existing_destinations_policy: update
      version: 1.0.0
    service: destination
    service-name: standalone-with-connectivity-service-destination-service
    service-plan: lite
- name: standalone-with-connectivity-service-connectivity
  type: org.cloudfoundry.managed-service
  parameters:
    service: connectivity
    service-plan: lite
parameters:
  deploy_mode: html5-repo
  enable-parallel-deployments: true
"
`;
